UPD: GUI: more text for slave disable confirm dialog

--- a/gui/static/css/mamid.css
+++ b/gui/static/css/mamid.css
@@ -165,3 +165,8 @@ code {
     background-color: #e8e8e8;
     color: #000;
 }
+
+.mamid:before {
+    content: "MAMID";
+    font-style: italic;
+}
