--- a/gui/static/css/mamid.css
+++ b/gui/static/css/mamid.css
@@ -170,3 +170,8 @@ code {
     content: "MAMID";
     font-style: italic;
 }
+
+.upload input, .upload button {
+    margin: 15px 0 0 0;
+    list-style-type: none;
+}
