--- a/gui/static/css/mamid.css
+++ b/gui/static/css/mamid.css
@@ -179,3 +179,83 @@ code {
 .mouse-link {
     cursor: pointer;
 }
+
+@-moz-keyframes rotatecaret /*--for firefox--*/{
+
+    from{
+        -moz-transform:rotate(0deg);
+    }
+    to{
+        -moz-transform:rotate(-180deg);
+    }
+
+}
+
+@-webkit-keyframes rotatecaret /*--for webkit--*/{
+
+    from{
+        -webkit-transform:rotate(0deg);
+    }
+    to{
+        -webkit-transform:rotate(-180deg);
+    }
+
+}
+
+@keyframes rotatecaret /*--for firefox--*/{
+
+    from{
+        transform:rotate(0deg);
+    }
+    to{
+        transform:rotate(-180deg);
+    }
+
+}
+
+@-moz-keyframes rotatecaret-back/*--for firefox--*/{
+
+    from{
+        -moz-transform:rotate(-180deg);
+    }
+    to{
+        -moz-transform:rotate(0deg);
+    }
+
+}
+
+@-webkit-keyframes rotatecaret-back /*--for webkit--*/{
+
+    from{
+        -webkit-transform:rotate(-180deg);
+    }
+    to{
+        -webkit-transform:rotate(0deg);
+    }
+
+}
+
+@keyframes rotatecaret-back /*--for firefox--*/{
+
+    from{
+        transform:rotate(-180deg);
+    }
+    to{
+        transform:rotate(0deg);
+    }
+
+}
+
+.rotatecaret {
+    animation-name: rotatecaret;
+    animation-duration: 300ms;
+    animation-fill-mode: forwards;
+    transform:rotate(-180deg);
+}
+
+.rotatecaret-up {
+    animation-name: rotatecaret-back;
+    animation-duration: 300ms;
+    animation-fill-mode: forwards;
+    transform:rotate(0deg);
+}
